--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-demo",
+    "start": "egg-scripts start --daemon --title=egg-server-demo --ignore-stderr",
     "stop": "egg-scripts stop --title=egg-server-demo",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
